--- a/about.html
+++ b/about.html
@@ -51,16 +51,21 @@
 </nav>
 
     	 <div class="about">
+</div>
+
+<div class="about-copy">
 	<div>
-    <h1>About Us</h1>
+		<h2>We are a software shop based in Bethnal Green. We build web and mobile apps in React, React Native and Hapi.</h2>
+		<h2>All of us are graduates of the coding school <a href="http://www.foundersandcoders.com/" target="_blank">Founders & Coders</a>.</h2>
 	</div>
 </div>
 
-<div class="training-copy">
-	<div>
-		<h2>We are a software shop based in Bethnal Green. We build web and mobile apps in React, React Native and Hapi.</h2>
-		<h2>We are graduates of the coding school Founders & Coders</h2>
-	</div>
+<div class="us-container">
+	<div class="team-image izaak"></div>
+	<div class="team-image bes"></div>
+	<div class="team-image nikhi"></div>
+	<div class="team-image dan"></div>
+	<div class="team-image jack"></div>
 </div>
     	<div id="contact"></div>
 <div class="contact">
