--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 </nav>
 
     	 <div class="landing">
-		<div id="image" class="section-landing-image"></div>
-		<div class="section-landing-image-alt"></div>
+		<div class="section-landing-image"></div>
 		<h1>Globe Town</h1>
 </div>
 
