--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </header>
      <div class="content">
   <section class="grid-container">
-    <div class="grid-2" style="padding-right:15px">
+    <div class="grid-2">
       <h1>This summer we will be teaching software craftsmanship to ambitious women and men in Palestine.</h1>
       <p>Where traditional industries are limited, software is a viable alternative. Fast internet and good equipment open the door to a global marketplace, where work can be both fulfilling and profitable.</p>
       <span class="space"></span>
